syntax = "proto3";

package auth;
option go_package="gen/pb";

service Auth {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc LogIn (LogInRequest) returns (LogInResponse);
}

message SignUpRequest {
    string lastName = 1;
    string firstName = 2;
    string email = 3;
    string password = 4;
}

message SignUpResponse {
    bool result = 1;
    string token = 2;
}

message LogInRequest {
    string email = 1;
    string password = 2;
}

message LogInResponse {
    bool result = 1;
    string token = 2;
}

